add_executable(EventLoop_test1 EventLoop_test1.cpp)
target_link_libraries(EventLoop_test1 libserver_reactor)

add_executable(EventLoop_test2 EventLoop_test2.cpp)
target_link_libraries(EventLoop_test2 libserver_reactor)

add_executable(EventLoop_test3 EventLoop_test3.cpp)
target_link_libraries(EventLoop_test3 libserver_reactor)

add_executable(EventLoop_test4 EventLoop_test4.cpp)
target_link_libraries(EventLoop_test4 libserver_reactor)

add_executable(EventLoop_test5 EventLoop_test5.cpp)
target_link_libraries(EventLoop_test5 libserver_reactor)

add_executable(EventLoop_test6 EventLoop_test6.cpp)
target_link_libraries(EventLoop_test6 libserver_reactor)

add_executable(Acceptor_test Acceptor_test.cpp)
target_link_libraries(Acceptor_test libserver_reactor)

add_executable(TcpConnection_test1 TcpConnection_test1.cpp)
target_link_libraries(TcpConnection_test1 libserver_reactor)

add_executable(TcpConnection_test2 TcpConnection_test2.cpp)
target_link_libraries(TcpConnection_test2 libserver_reactor)

add_executable(TcpConnection_test3 TcpConnection_test3.cpp)
target_link_libraries(TcpConnection_test3 libserver_reactor)

add_executable(Connector_test Connector_test.cpp)
target_link_libraries(Connector_test libserver_reactor)

add_executable(TcpClient_test TcpClient_test.cpp)
target_link_libraries(TcpClient_test libserver_reactor)

set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/bin)
